// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxSelection should render 1`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    aria-label="Clear Selection"
    className="bx--list-box__selection"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    <ForwardRef(Close16)>
      <Icon
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "willChange": "transform",
            }
          }
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4.7L11.3 4 8 7.3 4.7 4 4 4.7 7.3 8 4 11.3 4.7 12 8 8.7 11.3 12 12 11.3 8.7 8z"
          />
        </svg>
      </Icon>
    </ForwardRef(Close16)>
  </div>
</ListBoxSelection>
`;

exports[`ListBoxSelection should render 2`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  selectionCount={3}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": "translation",
        },
        Object {
          "type": "return",
          "value": "translation",
        },
      ],
    }
  }
>
  <div
    aria-label="Clear Selection"
    className="bx--list-box__selection bx--tag--filter bx--list-box__selection--multi"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    3
    <ForwardRef(Close16)>
      <Icon
        height={16}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "willChange": "transform",
            }
          }
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 4.7L11.3 4 8 7.3 4.7 4 4 4.7 7.3 8 4 11.3 4.7 12 8 8.7 11.3 12 12 11.3 8.7 8z"
          />
        </svg>
      </Icon>
    </ForwardRef(Close16)>
  </div>
</ListBoxSelection>
`;
